# py3signer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  DISCLAIMER.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY_REVIEW.md  compare_blspy.py  entrypoint.sh  gunicorn.conf.py  py3signer_core.pyi  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
docs/: MULTI_WORKER.md  index.md  pytest_asyncio_investigation.md
docs/introduction/: risks.md  why_py3signer.md
docs/quick-start/: installation.md  running.md
docs/reference/: api.md  architecture.md  configuration.md
examples/: config.yaml  sample_keystore.json  test_api.sh
py3signer/: __init__.py  __main__.py  asgi.py  bulk_loader.py  cli.py  config.py  handlers.py  handlers_profiled.py  keystore.py  metrics.py  metrics_middleware.py  metrics_server.py  models.py  path_utils.py  server.py  signer.py  signing_types.py  ssz_signing.py  storage.py  types.py  wsgi.py
py3signer/handlers/: __init__.py  base.py  health.py  keystores.py  signing.py
rust/bls_bench/: Cargo.toml
rust/bls_bench/src/: main.rs
rust/py3signer_core/: Cargo.toml  py3signer_core.pyi
rust/py3signer_core/examples/: profile_signing.rs
rust/py3signer_core/src/: lib.rs
scripts/: benchmark.py  profile.py  profile_comprehensive.py  profile_server.py
tests/: conftest.py  test_api.py  test_bulk_loader.py  test_config.py  test_eip2335_vectors.py  test_keystore.py  test_metrics.py  test_path_utils.py  test_signing.py  test_signing_types.py  test_storage_persistence.py
tests/data/: failing_keystore.json  keystore_valid_2.json  keystore_valid_2.txt  test_keystore.json  test_keystore.txt  test_keystore_pbkdf2.json  test_keystore_scrypt.json
