[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "py3signer"
version = "0.1.0"
description = "A Remote BLS Signer for Ethereum Consensus Layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.21.0",
    "granian>=2.7.0",
    "msgspec>=0.20.0",
    "prometheus-client>=0.24.0",
]

[project.scripts]
py3signer = "py3signer.cli:main"

[tool.maturin]
module-name = "py3signer_core"
manifest-path = "rust/py3signer_core/Cargo.toml"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "maturin>=1.12.0",
    "httpx>=0.28.0",
]

[tool.pytest]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = ["-v", "--tb=short"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
