[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "py3signer"
version = "0.1.0"
description = "A Remote BLS Signer for Ethereum Consensus Layer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "litestar[standard]>=2.21.0",
    "granian>=2.7.0",
    "msgspec>=0.20.0",
    "prometheus-client>=0.24.0",
    "pytheus-backend-rs>=0.0.9",
    "pytheus>=0.6.1",
]

[project.scripts]
py3signer = "py3signer.cli:main"

[tool.maturin]
module-name = "py3signer_core"
manifest-path = "rust/py3signer_core/Cargo.toml"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "maturin>=1.12.0",
    "httpx>=0.28.0",
    "ruff>=0.15.1",
    "mypy>=1.19.1",
]

[tool.pytest]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = ["-v", "--tb=short"]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = ["D", "EM", "FIX", "PL", "TD", "ANN204", "ANN401", "C408", "C901", "COM812", "ERA001", "E501", "FBT", "G004", "ISC001", "N805", "N812", "N818", "TRY003", "TRY400", "TRY401", "BLE001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ERA001", "E501", "PLR", "INP", "SLF"]
"rust/*.pyi" = ["PYI021"]

[tool.mypy]
python_version = "3.14"
strict = true
