[package]
name = "py3signer_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "py3signer_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
blst = "0.3"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scrypt = { version = "0.11", default-features = false }
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false }
sha3 = "0.10"

[dev-dependencies]
hex-literal = "0.4"
