[package]
name = "py3signer_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "py3signer_core"
crate-type = ["cdylib", "rlib"]  # Added rlib for examples

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
blst = "0.3.16"
sha2 = "0.10.9"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
scrypt = { version = "0.11.0", default-features = false }
aes = "0.8.4"
ctr = "0.9.2"
pbkdf2 = { version = "0.12.2", default-features = false }

[dev-dependencies]
hex-literal = "1.1.0"
